[package]
name = "json_flex"
description = "Flexibly Parse a JSON string"
homepage = "http://nacika.com"
repository = "https://github.com/nacika-ins/json_flex"
readme = "README.md"
keywords = ["json"]
license = "MIT"
version = "0.3.2"
authors = ["nacika <nacika.inscatolare@gmail.com>"]

[dependencies]
rustc-serialize="*"
